# yankee-stadium-beer-price-controls

./: .coverage  .gitignore  .pre-commit-config.yaml  .vercelignore  CLAUDE.md  DYNAMIC_VALUES.md  GEMINI.md  HETEROGENEOUS_MODEL_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LEISTEN_COMPARISON.md  LICENSE  MODEL_NOTES.md  POLICY_BRIEF.md  README.md  SESSION_SUMMARY.md  SUMMARY_OF_UPDATES.md  WELCOME_BACK.md  config.yaml  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  deploy-book.yml  deploy-paper.yml
charts/: price_ceiling_analysis.csv  robustness_cross_elasticity.csv
data/: default_parameters.json
docs/: DATA_SOURCES.md  MAINTAINING_DOCS.md  QUICKSTART.md  README.md  SUBSTITUTIONS.md  TAX_ANALYSIS.md  TAX_CALIBRATION.md  _config.yml  _toc.yml  abstract.md  assumptions.md  background.md  calibration.md  complementarity_comparison.md  complementarity_specs.md  conclusion.md  executive_summary.md  intro.md  model.md  monte_carlo.ipynb  myst.yml  paper.md  policy.md  price_ceiling_analysis.md  references.bib  references_page.md  sensitivity.ipynb  simulation.ipynb  taxes.md  test_substitutions.md
docs/_build/logs/: myst.build.json
docs/_build/site/: config.json  myst.search.json  myst.xref.json  objects.inv
docs/_build/site/content/: background.json  calibration.json  conclusion.json  intro.json  model.json  policy.json  references-page.json  simulation.json  taxes.json
docs/_build/site/public/: background-637875dc163d6c4ed985ab6a8616abe4.md  calibration-b28a376746c9b483748c3d4b22bcbadb.md  conclusion-b6ae915c833f622c016626248a0e5888.md  references_page-2cebcc6d4d051c3dc3c99435494c39a6.md  simulation-330198ecebb5a839ee558945c1447204.ipynb  taxes-54a67596f8fd8a004d9185029750416b.md
docs/templates/: conclusion.md.tpl  executive_summary.md.tpl  intro.md.tpl  policy.md.tpl  price_ceiling_analysis.md.tpl
paper/: .gitignore  _quarto.yml  index.qmd  references.bib
references/: REFERENCES.md
scripts/: build_pdf.sh  generate_agent_files.py  generate_model_values.py  rebuild_docs.sh  update_docs_values.py
src/: __init__.py  app.py  calibrate.py  config_loader.py  example.py  model.py  model_heterogeneous.py  price_ceiling_analysis.py  robustness_check.py  simulation.py
src/yankee_stadium_beer_controls/: __init__.py  calibrate.py  config_loader.py  example.py  model.py  paper.py  price_ceiling_analysis.py  simulation.py  web.py
templates/: AGENTS.md.tpl  README.md
tests/: test_calibrate.py  test_calibration_tdd.py  test_config_loader.py  test_coverage.py  test_demand_realism.py  test_full_calibration.py  test_model.py  test_nonbinding_ceiling.py  test_paper.py  test_price_ceiling_analysis.py  test_sanity_checks.py  test_simulation.py  test_utility_consistent.py  test_web.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: model-context.ts
